tidy up structure

--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -41,10 +41,9 @@ sorting=ynt
 
 \documenttype{Thesis}
 
-\previousdegrees{A.A.S., University of Southern Swampland, 1988 \\
-                 M.S., Art Therapy, University of New Mexico, 1991}
+\previousdegrees{Bachelor of Science, Shandong University, 2010}
 
-\date{December, \thisyear}
+\date{April, \thisyear}
 
 \maketitle
 
