--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,100 @@
+% @STRING{ jan = "January" }
+% @STRING{ feb = "February" }
+% @STRING{ mar = "March" }
+% @STRING{ apr = "April" }
+% @STRING{ may = "May" }
+% @STRING{ jun = "June" }
+% @STRING{ jul = "July" }
+% @STRING{ aug = "August" }
+% @STRING{ sep = "September" }
+% @STRING{ oct = "October" }
+% @STRING{ nov = "November" }
+% @STRING{ dec = "December" }
+
+@misc{westworld2016,
+  title =   {Westworld},
+  author = {J.J. Abrams and Bryan Burk,Lisa Joy and Jonathan Nolan and Jerry Weintraub and Bruce Dunn and Susan Ekins and Kathy Lingg and Noreen O'Toole and Stephen Semel and Athena Wickham and David Auge and Richard J. Lewis and Cherylanne Martin and Roberto Patino and Kath Lingenfelter and Daniel T. Thomsen and Alan Poul and Ed Brubaker and Dominic Mitchell and Bridget Carpenter and Scott Stephens and David Coatsworth and Timothy Stormer and Carly Wray},
+  director = {Jonathan Nolan, Frederick E.O. Toye, Jonny Campbell, Richard J. Lewis, Michelle MacLaren, Neil Marshall, Vincenzo Natali, Stephen Williams, Lisa Joy, Craig Zobel}, 
+  journal={IMDb},
+  year = {2016},
+  publisher = {Bad Robot, Jerry Weintraub Productions, Kilter Films, Warner Bros. Television}
+}
+
+
+@article{Cowan1956,
+author = {Cowan, C L and Reines, F and Harrison, F B and Kruse, H W and McGuire, A D},
+doi = {10.1126/science.124.3212.103},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Cowan et al/1956 - Science (New York, N.Y.).pdf:pdf},
+issn = {0036-8075},
+journal = {Science (New York, N.Y.)},
+mendeley-groups = {Neutrino/experiment},
+month = {07},
+number = {3212},
+pages = {103--4},
+pmid = {17796274},
+publisher = {American Association for the Advancement of Science},
+title = {{Detection of the Free Neutrino: a Confirmation.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/17796274},
+volume = {124},
+year = {1956}
+}
+
+
+@article{Bahcall2003,
+author = {Bahcall, John N.},
+doi = {10.1016/S0920-5632(03)01306-9},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Bahcall/2003 - Nuclear Physics B - Proceedings Supplements.pdf:pdf},
+issn = {09205632},
+journal = {Nuclear Physics B - Proceedings Supplements},
+mendeley-groups = {Astrophysics/solar},
+month = {04},
+pages = {77--86},
+title = {{Solar models: An historical overview}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0920563203013069},
+volume = {118},
+year = {2003}
+}
+
+
+@article{Bahcall1973,
+author = {Bahcall, J.N.},
+doi = {10.1016/0029-554X(73)90715-5},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Bahcall/1973 - Nuclear Instruments and Methods.pdf:pdf},
+issn = {0029554X},
+journal = {Nuclear Instruments and Methods},
+mendeley-groups = {Neutrino/solar},
+month = {07},
+pages = {381--384},
+title = {{The solar neutrino problem}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/0029554X73907155},
+volume = {110},
+year = {1973}
+}
+
+
+@article{Janka2016b,
+abstract = {Nonspherical mass motions are a generic feature of core-collapse supernovae, and hydrodynamic instabilities play a crucial role for the explosion mechanism. First successful neutrino-driven explosions could be obtained with self-consistent, first-principle simulations in three spatial dimensions (3D). But 3D models tend to be less prone to explosion than corresponding axisymmetric (2D) ones. This has been explained by 3D turbulence leading to energy cascading from large to small spatial scales, inversely to the 2D case, thus disfavoring the growth of buoyant plumes on the largest scales. Unless the inertia to explode simply reflects a lack of sufficient resolution in relevant regions, it suggests that some important aspect may still be missing for robust and sufficiently energetic neutrino-powered explosions. Such deficits could be associated with progenitor properties like rotation, magnetic fields or pre-collapse perturbations, or with microphysics that could lead to an enhancement of neutrino heating behind the shock. 3D simulations have also revealed new phenomena that are not present in 2D, for example spiral modes of the standing accretion shock instability (SASI) and a stunning dipolar lepton-emission self-sustained asymmetry (LESA). Both impose time- and direction-dependent variations on the detectable neutrino signal. The understanding of these effects and of their consequences is still in its infancy.},
+archivePrefix = {arXiv},
+arxivId = {1602.05576},
+author = {Janka, Hans-Thomas and Melson, Tobias and Summa, Alexander},
+doi = {10.1146/annurev-nucl-102115-044747},
+eprint = {1602.05576},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Janka, Melson, Summa/2016 - Annual Review of Nuclear and Particle Science.pdf:pdf},
+issn = {0163-8998},
+journal = {Annual Review of Nuclear and Particle Science},
+keywords = {fluid instabilities,hydrodynamics,neutrinos,neutron stars,supernovae},
+mendeley-groups = {Neutrino/supernova},
+number = {1},
+pages = {341--375},
+title = {{Physics of Core-Collapse Supernovae in Three Dimensions: A Sneak Preview}},
+url = {http://www.annualreviews.org/doi/10.1146/annurev-nucl-102115-044747},
+volume = {66},
+year = {2016}
+}
+
+
+
+
 @article{Babu1992,
 author = {Babu, K.S and Rothstein, I.Z},
 doi = {10.1016/0370-2693(92)90860-7},
