adapted rabi osc paper into chapter

--- a/preambles.tex
+++ b/preambles.tex
@@ -1,5 +1,5 @@
-\usepackage{amsmath}
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%% Biblatex %%%%%%%%%%%%%%%
 \usepackage[
 backend=biber,
 % style=phys,
@@ -22,3 +22,53 @@ sorting=ynt
 %   \field{director}
 %   \field{producer}
 % }
+
+
+% \usepackage{natbib}
+
+%%%%%%%%% Biblatex %%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
+\usepackage{graphicx}% Include figure files
+% \graphicspath{ {chapters/assets/} }
+
+%\usepackage{subcaption}
+%\usepackage[caption=false]{subfig}
+
+\usepackage{dcolumn}% Align table columns on decimal point
+\usepackage{bm}% bold math
+%\usepackage{hyperref}% add hypertext capabilities
+%\usepackage[mathlines]{lineno}% Enable numbering of text and display math
+%\linenumbers\relax % Commence numbering lines
+
+%\usepackage[showframe,%Uncomment any one of the following lines to test
+%%scale=0.7, marginratio={1:1, 2:3}, ignoreall,% default settings
+%%text={7in,10in},centering,
+%%margin=1.5in,
+%%total={6.5in,8.75in}, top=1.2in, left=0.9in, includefoot,
+%%height=10in,a5paper,hmargin={3cm,0.8in},
+%]{geometry}
+
+\usepackage{amsmath}
+\usepackage{amssymb}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%  PREAMBLES %%%%%%%%%
+\newcommand{\ud}[1]{{#1^{\dagger}}}
+\newcommand{\bra}[1]{\left\langle #1\right|}
+\newcommand{\ket}[1]{\left| #1\right\rangle}
+\newcommand\Tr{\mathrm{Tr}}
+\newcommand{\braket}[2]{\langle #1 \mid #2 \rangle}
+\newcommand\I{\mathbb{I}}
+\newcommand{\avg}[1]{\left< #1 \right>}
+\newcommand{\sech}[1]{{\operatorname{sech}{#1}}}
+\newcommand{\csch}[1]{{\operatorname{csch}{#1}}}
+\newcommand{\RD}{D}
+\newcommand{\ri}{\mathrm{i}}
+\DeclareMathOperator{\sign}{sign}
+
+%%%%%%  PREAMBLES %%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
