--- a/references.bib
+++ b/references.bib
@@ -11,6 +11,20 @@
 % @STRING{ nov = "November" }
 % @STRING{ dec = "December" }
 
+% @STRING{ {jan} = "January" }
+% @STRING{ {feb} = "February" }
+% @STRING{ {mar} = "March" }
+% @STRING{ {apr} = "April" }
+% @STRING{ {may} = "May" }
+% @STRING{ {jun} = "June" }
+% @STRING{ {jul} = "July" }
+% @STRING{ {aug} = "August" }
+% @STRING{ {sep} = "September" }
+% @STRING{ {oct} = "October" }
+% @STRING{ {nov} = "November" }
+% @STRING{ {dec} = "December" }
+
+
 @misc{westworld2016,
   title =   {Westworld},
   author = {J.J. Abrams and Bryan Burk,Lisa Joy and Jonathan Nolan and Jerry Weintraub and Bruce Dunn and Susan Ekins and Kathy Lingg and Noreen O'Toole and Stephen Semel and Athena Wickham and David Auge and Richard J. Lewis and Cherylanne Martin and Roberto Patino and Kath Lingenfelter and Daniel T. Thomsen and Alan Poul and Ed Brubaker and Dominic Mitchell and Bridget Carpenter and Scott Stephens and David Coatsworth and Timothy Stormer and Carly Wray},
@@ -148,3 +162,393 @@ title = {{Do neutrinos have mass only within matter?}},
 volume = {448},
 year = {1999}
 }
+
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%% Rabi Oscillations %%%%%%%%%%%%%%%%
+
+
+@book{Boyd2008,
+author = {{R. W. Boyd}},
+edition = {Third},
+isbn = {978-0-12-369470-6},
+mendeley-groups = {Physics},
+publisher = {Elsevier},
+title = {{Nonlinear Optics}},
+url = {http://www.sciencedirect.com/science/book/9780123694706},
+year = {2008}
+}
+
+@article{Kneller2006,
+author = {J. P. Kneller and G. C. McLaughlin},
+doi = {10.1103/PhysRevD.73.056003},
+file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Kneller, McLaughlin - 2006 - Monte Carlo neutrino oscillations.pdf:pdf},
+issn = {1550-7998},
+journal = {Physical Review D},
+mendeley-groups = {Neutrino/matter},
+month = {mar},
+number = {5},
+pages = {056003},
+title = {{Monte Carlo neutrino oscillations}},
+url = {http://link.aps.org/doi/10.1103/PhysRevD.73.056003},
+volume = {73},
+year = {2006}
+}
+
+@article{wolf78,
+abstract = {The effect of coherent forward scattering must be taken into account when considering the oscillations of neutrinos traveling through matter. In particular, for the case of massless neutrinos for which vacuum oscillations cannot occur, oscillations can occur in matter if the neutral current has an off-diagonal piece connecting different neutrino types. Applications discussed are solar neutrinos and a proposed experiment involving transmission of neutrinos through 1000 km of rock.},
+author = {Wolfenstein, L.},
+doi = {10.1103/PhysRevD.17.2369},
+file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Wolfenstein - 1978 - Neutrino oscillations in matter.pdf:pdf},
+issn = {0556-2821},
+journal = {Physical Review D},
+mendeley-groups = {Neutrino,Neutrino/MSW},
+month = {May},
+number = {9},
+pages = {2369--2374},
+title = {{Neutrino oscillations in matter}},
+url = {http://link.aps.org/doi/10.1103/PhysRevD.17.2369},
+volume = {17},
+year = {1978}
+}
+
+@article{Mikheev:1986gs,
+      author         = "Mikheev, S. P. and Smirnov, A. {\relax Yu}.",
+      title          = "{Resonance Amplification of Oscillations in Matter and
+                        Spectroscopy of Solar Neutrinos}",
+      journal        = "Sov. J. Nucl. Phys.",
+      volume         = "42",
+      year           = "1985",
+      pages          = "913-917",
+      note           = "[Yad. Fiz.42,1441(1985)]",
+      SLACcitation   = "%%CITATION = SJNCA,42,913;%%"
+}
+
+@article{Petcov1998b,
+abstract = {It is shown that the strong enhancement of the Earth (day-night) effect for solar neutrinos crossing the Earth core in the case of the small mixing angle MSW electron neutrino to muon (tau) neutrino transition solution of the solar neutrino problem is due to a new resonance effect in the solar neutrino transitions in the Earth and not just to the MSW effect in the core. The effect is in many respects similar to the electron paramagnetic resonance. The conditions for existence of this new resonance effect are discussed. They include specific constraints on the neutrino oscillation lengths in the Earth mantle and in the Earth core, thus the resonance is a ``neutrino oscillation length resonance''. The effect exhibits strong dependence on the neutrino energy. Analytic expression for the probability accounting for the solar neutrino transitions in the Earth, which provides a high precision description of the transitions, including the new resonance effect, is derived. The implications of our results for the searches of the day-night asymmetry in the solar neutrino experiments are briefly discussed. The new resonance effect is operative also in the muon neutrino to electron neutrino (electron neutrino to muon neutrino) transitions of atmospheric neutrinos crossing the Earth core.},
+archivePrefix = {arXiv},
+arxivId = {hep-ph/9805262},
+author = {S. T. Petcov},
+doi = {10.1016/S0370-2693(98)00742-4},
+eprint = {9805262},
+file = {:Users/leima/Documents/Mendeley Desktop/Physics Letters B/Petcov - 1998 - Diffractive-like (or parametric-resonance-like) enhancement of the Earth (day-night) effect for solar neutrinos crossing.pdf:pdf},
+issn = {03702693},
+journal = {Physics Letters B},
+mendeley-groups = {Neutrino/parametric-effect},
+month = {Aug},
+number = {3-4},
+pages = {321--332},
+primaryClass = {hep-ph},
+title = {{Diffractive-like (or parametric-resonance-like?) enhancement of the Earth (day-night) effect for solar neutrinos crossing the Earth core}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0370269398007424 http://arxiv.org/abs/hep-ph/9805262 http://dx.doi.org/10.1016/S0370-2693(98)00742-4},
+volume = {434},
+year = {1998}
+}
+
+
+@article{wolfensteinprd1979,
+author = {Wolfenstein, L.},
+doi = {10.1103/PhysRevD.20.2634},
+file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Wolfenstein - 1979 - Neutrino oscillations and stellar collapse.pdf:pdf},
+issn = {0556-2821},
+journal = {Physical Review D},
+mendeley-groups = {Neutrino/MSW,Physics/HEP},
+month = {nov},
+number = {10},
+pages = {2634--2635},
+title = {{Neutrino oscillations and stellar collapse}},
+url = {http://link.aps.org/doi/10.1103/PhysRevD.20.2634},
+volume = {20},
+year = {1979}
+}
+
+@article{kuo1989,
+abstract = {Review is devoted to the systematic representation of the theory (first part) and the applications (second part) of neutrino oscillations in matter. The evolution equations for mixed neutrinos in matter are deduced in different forms and analized. The consideration includes symmetries, limits of applications and some generalizations of equations. The analogies of the mixed neutrinos in matter have been found. We discuss in details the properties and the physical sense of the resonance in a system of mixed neutrinos. For homogeneous matter the effect of resonant enhancement of oscillations is described. Different representation of the adiabaticity condition, which determines a dynamics of neutrino oscillations, are given, and the adiabaticity parameter is introduced. Practically complete transformations of one neutrino species into another one are possible at the adiabatic (or near to adiabatic) crossing of resonance layer even at small vacuum mixing. The effect of non-oscillatory transition is remarked. Some results have been obtained for the adiabaticity violation regime. Also we review the exact solutions of the equations for special density distributions. The generalization of the theory for the case of three neutrino mixing is given. The effects of inelastic collisions as well as the divergence of neutrino wave packets are discussed. The theory of resonant conversion is applied then to the neutrino fluxes inside the Sun, the Earth and the collapsing stars. The distortion of the neutrino energy spectra by the matter filters with different density distributions are calculated. We describe the observable effects of conversion for solar and atmospheric neutrinos as well as for neutrinos from collapsing stars. The searching for these effects is considered as a method of measuring the neutrino masses and mixing. Resonant conversion may quite naturally solve the solar neutrino problem. The distinctions of resonance conversion effects and another mechanisms for solar $\nu$e - flux reduction are considered, and in this connection the possibilities of solar neutrino spectroscopy are outlined. We discuss the consequences of $\nu$ - signal detection from supernova 1987A. {\textcopyright} 1989.},
+author = {Kuo, T. K. and Pantaleone, James},
+doi = {10.1103/RevModPhys.61.937},
+file = {:Users/leima/Documents/Mendeley Desktop/Reviews of Modern Physics/Kuo, Pantaleone - 1989 - Neutrino oscillations in matter.pdf:pdf},
+issn = {0034-6861},
+journal = {Reviews of Modern Physics},
+mendeley-groups = {Neutrino/matter},
+month = {oct},
+number = {4},
+pages = {937--979},
+title = {{Neutrino oscillations in matter}},
+url = {http://link.aps.org/doi/10.1103/RevModPhys.61.937},
+volume = {61},
+year = {1989}
+}
+
+
+@article{Krastev1989,
+author = {Krastev, P.I. and Smirnov, A.Yu.},
+doi = {10.1016/0370-2693(89)91206-9},
+file = {:Users/leima/Documents/Mendeley Desktop/Physics Letters B/Krastev, Smirnov - 1989 - Parametric effects in neutrino oscillations.pdf:pdf},
+issn = {03702693},
+journal = {Physics Letters B},
+mendeley-groups = {Neutrino/matter,Neutrino/parametric-effect},
+month = {August},
+number = {3-4},
+pages = {341--346},
+title = {{Parametric effects in neutrino oscillations}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/0370269389912069},
+volume = {226},
+year = {1989}
+}
+
+@article{Akhmedov1999,
+annote = {one and a half period slab approximation of Earth matter profile},
+archivePrefix = {arXiv},
+arxivId = {hep-ph/hep-ph/9805272},
+author = {Akhmedov, E.Kh.},
+doi = {10.1016/S0550-3213(98)00723-8},
+eprint = {hep-ph/9805272},
+file = {:Users/leima/Documents/Mendeley Desktop/Nuclear Physics B/Akhmedov - 1999 - Parametric resonance of neutrino oscillations and passage of solar and atmospheric neutrinos through the earth.pdf:pdf},
+issn = {05503213},
+journal = {Nuclear Physics B},
+keywords = {1,2,e i n,e n s t,e y e v,earth,effect,have a simple analogue,i n t r,in clas-,it is well known,m i k h,m s w,matter effects,n o v -,neutrino oscillations in matter,neutrinos,o d u c,s m i r,t i o n,that the resonantly enhanced,the,w o l f},
+mendeley-groups = {Neutrino/parametric-effect},
+month = {jan},
+number = {1-2},
+pages = {25--51},
+primaryClass = {hep-ph},
+title = {{Parametric resonance of neutrino oscillations and passage of solar and atmospheric neutrinos through the earth}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0550321398007238},
+volume = {538},
+year = {1999}
+}
+
+
+@article{Akhmedov2000,
+abstract = {Neutrino oscillations in matter can exhibit a specific resonance enhancement -- parametric resonance, which is different from the MSW resonance. Oscillations of atmospheric and solar neutrinos inside the earth can undergo parametric enhancement when neutrino trajectories cross the core of the earth. In this paper we review the parametric resonance of neutrino oscillations in matter. In particular, physical interpretation of the effect and the prospects of its experimental observation in oscillations of solar and atmospheric neutrinos in the earth are discussed.},
+archivePrefix = {arXiv},
+arxivId = {hep-ph/9907435},
+author = {Akhmedov, E. Kh},
+doi = {10.1007/s12043-000-0006-4},
+eprint = {9907435},
+file = {:Users/leima/Documents/Mendeley Desktop/Pramana/Akhmedov - 2000 - Parametric resonance in neutrino oscillations in matter.pdf:pdf;:Users/leima/Documents/Mendeley Desktop/Pramana/Akhmedov - 2000 - Parametric resonance in neutrino oscillations in matter(2).pdf:pdf},
+issn = {0304-4289},
+journal = {Pramana},
+mendeley-groups = {Neutrino/stimulated,Neutrino,Neutrino/parametric-effect},
+month = {January},
+number = {1},
+pages = {47--63},
+primaryClass = {hep-ph},
+title = {{Parametric resonance in neutrino oscillations in matter}},
+url = {http://link.springer.com/10.1007/s12043-000-0006-4},
+volume = {54},
+year = {2000}
+}
+
+
+@article{Kneller2013,
+abstract = {Large amplitude oscillations between states of a quantum system can be stimulated by sinusoidal external potentials with frequencies that are equal to the energy level splitting of the states or a fraction thereof. We investigate this effect for neutrino oscillations both analytically and numerically finding a simple expression for amplitude and wavelength of the transitions as a function of the density, the amplitude and wavenumber of the fluctuation, and the matter mixing matrix elements. We apply our findings to the supernova environment and find that it is possible to predict stimulated transitions that occur due to sinusoidal perturbations in the density.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1202.0776v1},
+author = {Kneller, James P. and McLaughlin, Gail C. and Patton, Kelly M.},
+doi = {10.1088/0954-3899/40/5/055002},
+eprint = {arXiv:1202.0776v1},
+file = {:Users/leima/Documents/Mendeley Desktop/Journal of Physics G Nuclear and Particle Physics/Kneller, McLaughlin, Patton - 2013 - Stimulated neutrino transformation with sinusoidal density profiles.pdf:pdf},
+isbn = {9780735411883},
+issn = {0954-3899},
+journal = {Journal of Physics G: Nuclear and Particle Physics},
+keywords = {Matter Effect,Neutrinos,Parametric Resonance,Stimulated Neutrino Oscillation},
+mendeley-groups = {Neutrino/stimulated},
+mendeley-tags = {Matter Effect,Stimulated Neutrino Oscillation},
+month = {May},
+number = {5},
+pages = {055002},
+title = {{Stimulated neutrino transformation with sinusoidal density profiles}},
+url = {http://scitation.aip.org/content/aip/proceeding/aipcp/10.1063/1.4826746 http://stacks.iop.org/0954-3899/40/i=5/a=055002?key=crossref.7eb9d1215a0aec9cdd33120d477f5bbe},
+volume = {40},
+year = {2013}
+}
+
+@article{Patton2014,
+archivePrefix = {arXiv},
+arxivId = {arXiv:1407.7835v1},
+author = {Patton, Kelly M. and Kneller, James P. and McLaughlin, Gail C.},
+doi = {10.1103/PhysRevD.89.073022},
+eprint = {arXiv:1407.7835v1},
+file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Patton, Kneller, McLaughlin - 2014 - Stimulated neutrino transformation through turbulence.pdf:pdf},
+journal = {Physical Review D},
+keywords = {Matter Effect,Stimulated Neutrino Oscillation},
+mendeley-groups = {Neutrino/matter,Neutrino/stimulated,Neutrino},
+mendeley-tags = {Matter Effect,Stimulated Neutrino Oscillation},
+month = {apr},
+number = {7},
+pages = {073022},
+title = {{Stimulated neutrino transformation through turbulence}},
+url = {http://link.aps.org/doi/10.1103/PhysRevD.89.073022},
+volume = {89},
+year = {2014}
+}
+
+
+
+
+@article{Duan2006a,
+abstract = {We study the flavor evolution of a dense gas initially consisting of pure mono-energetic {\$}\backslashnu{\_}e{\$} and {\$}\backslashbar\backslashnu{\_}e{\$}. Using adiabatic invariants and the special symmetry in such a system we are able to calculate the flavor evolution of the neutrino gas for the cases with slowly decreasing neutrino number densities. These calculations give new insights into the results of recent large-scale numerical simulations of neutrino flavor transformation in supernovae. For example, our calculations reveal the existence of what we term the ``collective precession mode''. Our analyses suggest that neutrinos which travel on intersecting trajectories subject to destructive quantum interference nevertheless can be in this mode. This mode can result in sharp transitions in the final energy-dependent neutrino survival probabilities across all trajectories, a feature seen in the numerical simulations. Moreover, this transition is qualitatively different for the normal and inverted neutrino mass hierarchies. Exploiting this difference, the neutrino signals from a future galactic supernova can potentially be used to determine the actual neutrino mass hierarchy.},
+archivePrefix = {arXiv},
+arxivId = {astro-ph/0703776},
+author = {Duan, Huaiyu and Fuller, George M. and Qian, Yong-Zhong},
+doi = {10.1103/PhysRevD.74.123004},
+eprint = {0703776},
+file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Duan, Fuller, Qian - 2006 - Collective neutrino flavor transformation in supernovae.pdf:pdf},
+issn = {1550-7998},
+journal = {Physical Review D},
+mendeley-groups = {Neutrino/collective},
+month = {dec},
+number = {12},
+pages = {123004},
+primaryClass = {astro-ph},
+title = {{Collective neutrino flavor transformation in supernovae}},
+url = {http://link.aps.org/doi/10.1103/PhysRevD.74.123004},
+volume = {74},
+year = {2006}
+}
+
+@article{Petcov2002,
+abstract = {In the context of three-neutrino oscillations, we study the possibility of using antineutrinos from nuclear reactors to explore the 10-4 eV2 {\textless} ??m???2 ??? 8 ?? 10-4 eV2 region of the LMA MSW solution of the solar neutrino problem and measure ??m???2 with high precision. The KamLAND experiment is not expected to determine ??m???2 if the latter happens to lie in the indicated region. By analysing both the total event rate suppression and the energy spectrum distortion caused by v??e oscillations in vacuum, we show that the optimal baseline of such an experiment is L ??? (20-25) km. Furthermore, for 10-4 eV2 {\textless} ??m???2 ??? 5 ?? 10-4 eV2, the same experiment might be used to try to distinguish between the two possible types of neutrino mass spectrum - with normal or with inverted hierarchy, by exploring the effect of interference between the atmospheric- and solar-??m2 driven oscillations; for larger values of ??m???2 not exceeding 8.0 ?? 10-4 eV2, a shorter baseline, L ??? 10 km, would be needed for the purpose. The indicated interference effect modifies in a characteristic way the energy spectrum of detected events. Distinguishing between the two types of neutrino mass spectrum requires, however, a high precision determination of the atmospheric ??m2, a sufficiently large sin2 ?? and a non-maximal sin2 2?????, where ?? and ????? are the mixing angles, respectively, limited by the CHOOZ and Palo Verde data and characterizing the solar neutrino oscillations. It also requires a relatively high precision measurement of the positron spectrum in the reaction v??e + p ??? e+ + n. ?? 2002 Elsevier Science B.V. All rights reserved.},
+archivePrefix = {arXiv},
+arxivId = {hep-ph/hep-ph/0112074},
+author = {Petcov, S.T. and Piai, M.},
+doi = {10.1016/S0370-2693(02)01591-5},
+eprint = {hep-ph/0112074},
+file = {:Users/leima/Documents/Mendeley Desktop/Physics Letters B/Petcov, Piai - 2002 - The LMA MSW solution of the solar neutrino problem, inverted neutrino mass hierarchy and reactor neutrino experime.pdf:pdf},
+issn = {03702693},
+journal = {Physics Letters B},
+keywords = {13.15.+g,14.60.Pq},
+mendeley-groups = {Neutrino/astro},
+month = {may},
+number = {1-2},
+pages = {94--106},
+primaryClass = {hep-ph},
+publisher = {Elsevier Science B.V.},
+title = {{The LMA MSW solution of the solar neutrino problem, inverted neutrino mass hierarchy and reactor neutrino experiments}},
+url = {http://dx.doi.org/10.1016/S0370-2693(02)01591-5 http://linkinghub.elsevier.com/retrieve/pii/S0370269302015915},
+volume = {533},
+year = {2002}
+}
+
+@article{Ploumistakis20092897,
+title = "Towards laser based improved experimental schemes for multiphoton pair production from vacuum ",
+journal = "Physics Letters A ",
+volume = "373",
+number = "32",
+pages = "2897 - 2900",
+year = "2009",
+note = "",
+issn = "0375-9601",
+doi = "http://dx.doi.org/10.1016/j.physleta.2009.06.015",
+url = "http://www.sciencedirect.com/science/article/pii/S0375960109007166",
+author = "I. Ploumistakis and S.D. Moustaizis and I. Tsohantjis",
+keywords = "Pair production",
+keywords = "Multiphoton processes",
+keywords = "High intensity lasers ",
+abstract = "Numerical estimates for pair production from vacuum in the presence of strong electromagnetic fields are derived, for two experimental schemes:   the first concerns a laser based X-FEL and the other imitates the \{E144\} experiment. The approximation adopted in this work is that of two level            multiphoton on resonance. Utilizing achievable values of laser beam parameters, an enhanced production efficiency of up to 1011 and 1015 pairs can be         obtained, for the two schemes respectively. "
+}
+
+
+@article{Muller2015,
+author = {Muller, B. and Janka, H.- T.},
+doi = {10.1093/mnras/stv101},
+file = {:Users/leima/Documents/Mendeley Desktop/Monthly Notices of the Royal Astronomical Society/Muller, Janka - 2015 - Non-radial instabilities and progenitor asphericities in core-collapse supernovae.pdf:pdf},
+issn = {0035-8711},
+journal = {Monthly Notices of the Royal Astronomical Society},
+keywords = {hydrodynamics,instabilities,neutrinos,radiative},
+mendeley-groups = {Neutrino/astro},
+month = {feb},
+number = {3},
+pages = {2141--2174},
+title = {{Non-radial instabilities and progenitor asphericities in core-collapse supernovae}},
+url = {http://mnras.oxfordjournals.org/cgi/doi/10.1093/mnras/stv101},
+volume = {448},
+year = {2015}
+}
+
+
+@article{Couch2015,
+author = {Couch, Sean M. and Ott, Christian D.},
+doi = {10.1088/0004-637X/799/1/5},
+file = {:Users/leima/Documents/Mendeley Desktop/The Astrophysical Journal/Couch, Ott - 2015 - THE ROLE OF TURBULENCE IN NEUTRINO-DRIVEN CORE-COLLAPSE SUPERNOVA EXPLOSIONS.pdf:pdf},
+issn = {1538-4357},
+journal = {The Astrophysical Journal},
+keywords = {general,hydrodynamics,neutrinos,supernovae},
+mendeley-groups = {Neutrino/astro},
+month = {jan},
+number = {1},
+pages = {5},
+title = {{The Role of Turbulence in Neutrino-driven Core-collapse Supernova Explosions}},
+url = {http://stacks.iop.org/0004-637X/799/i=1/a=5?key=crossref.5b5fcec309f37aef90a609482e70f24d},
+volume = {799},
+year = {2015}
+}
+
+
+@unpublished{Friedland2006,
+abstract = {Convection that develops behind the shock front during the first second of a core-collapse supernova explosion is believed to play a crucial role in the explosion mechanism. We demonstrate that the resulting turbulent density fluctuations may be directly observable in the neutrino signal starting at t{\textgreater}{\~{}} 3-4 s after the onset of the explosion. The effect comes from the modulation of the MSW flavor transformations by the turbulent density fluctuations. We derive a simple and general criterion for neutrino flavor depolarization in a Kolmogorov-type turbulence and apply it to the turbulence seen in modern numerical simulations. The turbulence casts a "shadow", by making other features, such as the shock front, unobservable in the density range covered by the turbulence.},
+archivePrefix = {arXiv},
+arxivId = {astro-ph/0607244},
+author = {Friedland, Alexander and Gruzinov, Andrei},
+eprint = {0607244},
+file = {:Users/leima/Documents/Mendeley Desktop/Unknown/Friedland, Gruzinov - 2006 - Neutrino signatures of supernova turbulence.pdf:pdf},
+mendeley-groups = {Neutrino/matter,Neutrino},
+month = {jul},
+pages = {1--5},
+primaryClass = {astro-ph},
+title = {{Neutrino signatures of supernova turbulence}},
+url = {http://arxiv.org/abs/astro-ph/0607244},
+year = {2006}
+}
+
+
+@article{Kneller2010,
+abstract = {Multidimensional core-collapse supernova simulations exhibit turbulence of large amplitude and over large scales. As neutrinos pass through the supernova mantle the turbulence is expected to modify their evolution compared to the case where the explosion is free of turbulence. In this paper we study this turbulence effect upon the neutrinos modeling the turbulence expected from multidimensional simulations by adding matter density fluctuations to density profiles taken from one-dimensional hydrodynamical simulations. We investigate the impact upon the supernova neutrino transition probabilities as a function of the neutrino mixing angle $\theta$13 and turbulence amplitude. In the high resonant channel and with large $\theta$13 values we find that turbulence is effectively two flavor for fluctuation amplitudes 1{\%} and have identified a new effect due to the combination of turbulence and multiple high resonances that leads to a sensitivity to fluctuations amplitudes as small as ∼0.001{\%}. At small values of $\theta$13, beyond the range achievable in Earth based experiments, we find that turbulence leads to new flavor transient effects in the channel where the Mikheev-Smirnov-Wolfenstein high resonance occurs. Finally, we investigate large amplitude fluctuations which lead to three-flavor effects due to broken high-low factorization and significant nonresonant transitions and identify two nonresonant turbulence effects, one depending on the $\theta$13, and the other independent of this angle and due to the low Mikheev-Smirnov-Wolfenstein resonance. {\textcopyright} 2010 The American Physical Society.},
+archivePrefix = {arXiv},
+arxivId = {1006.0913},
+author = {Kneller, James and Volpe, Cristina},
+doi = {10.1103/PhysRevD.82.123004},
+eprint = {1006.0913},
+file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Kneller, Volpe - 2010 - Turbulence effects on supernova neutrinos.pdf:pdf},
+issn = {1550-7998},
+journal = {Physical Review D},
+mendeley-groups = {Neutrino/matter},
+month = {dec},
+number = {12},
+pages = {123004},
+title = {{Turbulence effects on supernova neutrinos}},
+url = {http://link.aps.org/doi/10.1103/PhysRevD.82.123004},
+volume = {82},
+year = {2010}
+}
+
+@article{Loreti1994,
+abstract = {We develop the Redfield equation for delta-correlated gaussian noise and apply it to the case of two neutrino flavor or spin precession in the presence of a noisy matter density or magnetic field, respectively. The criteria under which physical fluctuations can be well approximated by the delta-correlated gaussian noise for the above cases are examined. Current limits on the possible neutrino magnetic moment and solar magnetic field suggest that a reasonably noisy solar magnetic field would not appreciably affect the solar electron neutrino flux. However, if the solar electron density has fluctuations of a few percent of the local density and a small enough correlation length, the MSW effect is suppressed for a range of parameters.},
+archivePrefix = {arXiv},
+arxivId = {nucl-th/9406003},
+author = {Loreti, F. N. and Balantekin, A. B.},
+doi = {10.1103/PhysRevD.50.4762},
+eprint = {9406003},
+file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Loreti, Balantekin - 1994 - Neutrino oscillations in noisy media.pdf:pdf;:Users/leima/Documents/Mendeley Desktop/Physical Review D/Loreti, Balantekin - 1994 - Neutrino oscillations in noisy media(2).pdf:pdf},
+issn = {0556-2821},
+journal = {Physical Review D},
+mendeley-groups = {Neutrino/matter},
+month = {oct},
+number = {8},
+pages = {4762--4770},
+primaryClass = {nucl-th},
+title = {{Neutrino oscillations in noisy media}},
+url = {http://arxiv.org/abs/nucl-th/9406003 http://dx.doi.org/10.1103/PhysRevD.50.4762 http://link.aps.org/doi/10.1103/PhysRevD.50.4762},
+volume = {50},
+year = {1994}
+}
+
+
+
+%%%%%%% Rabi Oscillations %%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
