update introduction: writing matter effect

--- a/references.bib
+++ b/references.bib
@@ -35,6 +35,11 @@
 }
 
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%% Introduction %%%%%%%%%%%%%%%%
+
+
 @article{Cowan1956,
 author = {Cowan, C L and Reines, F and Harrison, F B and Kruse, H W and McGuire, A D},
 doi = {10.1126/science.124.3212.103},
@@ -163,6 +168,27 @@ volume = {448},
 year = {1999}
 }
 
+
+
+@article{Kemp2017,
+author = {Kemp, E.},
+doi = {10.1002/asna.201713417},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Kemp/2017 - Astronomische Nachrichten.pdf:pdf},
+issn = {00046337},
+journal = {Astronomische Nachrichten},
+keywords = {brazil,campinas,de campinas,gleb wataghin institute of,physics,unicamp,universidade},
+mendeley-groups = {Neutrino/experiment},
+number = {9-10},
+pages = {993--999},
+title = {{The Deep Underground Neutrino Experiment: The precision era of neutrino physics}},
+url = {http://doi.wiley.com/10.1002/asna.201713417},
+volume = {338},
+year = {2017}
+}
+
+
+%%%%%%% Introduction %%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 
