--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -62,9 +62,10 @@
 
 % \setcounter{chapter}{-1}  % start chapter numbering at 0
 \include{chapters/introduction}
-\include{chapters/chapter1}
 \include{chapters/chapter2}
+\include{chapters/chapter3}
 \include{chapters/conclusion}
+\include{chapters/appendices}
 
 
 % the back matter
